--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,4 @@ include_directories(${CMAKE_SOURCE_DIR})
 include(SetupCompilationFailureTests)
 include(SetupCxxVersion)
 
-
+include(SetupCatchTests)
