Initial commit of tagged_tuple
Non-allocator constructors are implemented and mostly tested. Most of
the "detail" helpers are implemented.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 enable_testing(true)
 
-include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
 include(CodeCoverageDetection)
 include(SetupCxxVersion)
 
 include(SetupCompilationFailureTests)
 include(SetupCatchTests)
+
+add_subdirectory(test)
