Handle compiler version numbers in compilation tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@
 
 cmake_minimum_required(VERSION 3.0.0)
 
+project("tuples" CXX)
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 # In order to use certain code analysis tools like clang-tidy and cppcheck the
